@@ -16,24 +16,26 @@
 
 package io.appium.java_client;
 
-import com.google.common.collect.ImmutableMap;
 import io.appium.java_client.internal.CapabilityHelpers;
-import io.appium.java_client.internal.ReflectionHelpers;
 import io.appium.java_client.internal.SessionHelpers;
 import io.appium.java_client.remote.AppiumCommandExecutor;
-import io.appium.java_client.remote.AppiumNewSessionCommandPayload;
 import io.appium.java_client.remote.AppiumW3CHttpCommandCodec;
-import io.appium.java_client.remote.MobileCapabilityType;
 import io.appium.java_client.remote.options.BaseOptions;
+import io.appium.java_client.remote.options.SupportsWebSocketUrlOption;
 import io.appium.java_client.service.local.AppiumDriverLocalService;
 import io.appium.java_client.service.local.AppiumServiceBuilder;
+import lombok.Getter;
 import org.openqa.selenium.Capabilities;
 import org.openqa.selenium.ImmutableCapabilities;
-import org.openqa.selenium.MutableCapabilities;
 import org.openqa.selenium.OutputType;
 import org.openqa.selenium.SessionNotCreatedException;
+import org.openqa.selenium.UnsupportedCommandException;
 import org.openqa.selenium.WebDriverException;
+import org.openqa.selenium.bidi.BiDi;
+import org.openqa.selenium.bidi.BiDiException;
+import org.openqa.selenium.bidi.HasBiDi;
 import org.openqa.selenium.remote.CapabilityType;
+import org.openqa.selenium.remote.CommandInfo;
 import org.openqa.selenium.remote.DriverCommand;
 import org.openqa.selenium.remote.ErrorHandler;
 import org.openqa.selenium.remote.ExecuteMethod;
@@ -45,15 +47,22 @@ import org.openqa.selenium.remote.html5.RemoteLocationContext;
 import org.openqa.selenium.remote.http.HttpClient;
 import org.openqa.selenium.remote.http.HttpMethod;
 
+import javax.annotation.Nonnull;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
 
+import static com.google.common.base.Strings.isNullOrEmpty;
 import static io.appium.java_client.internal.CapabilityHelpers.APPIUM_PREFIX;
-import static io.appium.java_client.remote.MobileCapabilityType.AUTOMATION_NAME;
-import static io.appium.java_client.remote.MobileCapabilityType.PLATFORM_NAME;
-import static org.apache.commons.lang3.StringUtils.isBlank;
+import static io.appium.java_client.remote.options.SupportsAutomationNameOption.AUTOMATION_NAME_OPTION;
+import static java.util.Collections.singleton;
+import static org.openqa.selenium.remote.CapabilityType.PLATFORM_NAME;
 
 /**
  * Default Appium driver implementation.
@@ -64,13 +73,21 @@ public class AppiumDriver extends RemoteWebDriver implements
         ExecutesDriverScript,
         LogsEvents,
         HasBrowserCheck,
-        HasSettings {
+        CanRememberExtensionPresence,
+        HasSettings,
+        HasBiDi {
 
-    private static final ErrorHandler errorHandler = new ErrorHandler(new ErrorCodesMobile(), true);
+    private static final ErrorHandler ERROR_HANDLER = new ErrorHandler(new ErrorCodesMobile(), true);
     // frequently used command parameters
+    @Getter
     private final URL remoteAddress;
+    @Deprecated(forRemoval = true)
     protected final RemoteLocationContext locationContext;
     private final ExecuteMethod executeMethod;
+    private final Set<String> absentExtensionNames = new HashSet<>();
+    private URI biDiUri;
+    private BiDi biDi;
+    private boolean wasBiDiRequested = false;
 
     /**
      * Creates a new instance based on command {@code executor} and {@code capabilities}.
@@ -84,7 +101,7 @@ public class AppiumDriver extends RemoteWebDriver implements
         super(executor, capabilities);
         this.executeMethod = new AppiumExecutionMethod(this);
         locationContext = new RemoteLocationContext(executeMethod);
-        super.setErrorHandler(errorHandler);
+        super.setErrorHandler(ERROR_HANDLER);
         this.remoteAddress = executor.getAddressOfRemoteServer();
     }
 
@@ -140,17 +157,15 @@ public class AppiumDriver extends RemoteWebDriver implements
      * !!! This API is supposed to be used for **debugging purposes only**.
      *
      * @param remoteSessionAddress The address of the **running** session including the session identifier.
-     * @param platformName The name of the target platform.
-     * @param automationName The name of the target automation.
+     * @param platformName         The name of the target platform.
+     * @param automationName       The name of the target automation.
      */
     public AppiumDriver(URL remoteSessionAddress, String platformName, String automationName) {
         super();
-        ReflectionHelpers.setPrivateFieldValue(
-                RemoteWebDriver.class, this, "capabilities", new ImmutableCapabilities(
-                        ImmutableMap.of(
-                                PLATFORM_NAME, platformName,
-                                APPIUM_PREFIX + AUTOMATION_NAME, automationName
-                        )
+        this.capabilities = new ImmutableCapabilities(
+                Map.of(
+                        PLATFORM_NAME, platformName,
+                        APPIUM_PREFIX + AUTOMATION_NAME_OPTION, automationName
                 )
         );
         SessionHelpers.SessionAddress sessionAddress = SessionHelpers.parseSessionAddress(remoteSessionAddress);
@@ -161,62 +176,11 @@ public class AppiumDriver extends RemoteWebDriver implements
         executor.setResponseCodec(new W3CHttpResponseCodec());
         setCommandExecutor(executor);
         this.executeMethod = new AppiumExecutionMethod(this);
-        locationContext = new RemoteLocationContext(executeMethod);
-        super.setErrorHandler(errorHandler);
+        this.locationContext = new RemoteLocationContext(executeMethod);
+        super.setErrorHandler(ERROR_HANDLER);
         this.remoteAddress = executor.getAddressOfRemoteServer();
 
         setSessionId(sessionAddress.getId());
-    }
-
-    /**
-     * Changes platform name if it is not set and returns merged capabilities.
-     *
-     * @param originalCapabilities the given {@link Capabilities}.
-     * @param defaultName          a {@link MobileCapabilityType#PLATFORM_NAME} value which has
-     *                             to be set up
-     * @return {@link Capabilities} with changed platform name value or the original capabilities
-     */
-    protected static Capabilities ensurePlatformName(
-            Capabilities originalCapabilities, String defaultName) {
-        return originalCapabilities.getPlatformName() == null
-                ? originalCapabilities.merge(new ImmutableCapabilities(PLATFORM_NAME, defaultName))
-                : originalCapabilities;
-    }
-
-    /**
-     * Changes automation name if it is not set and returns merged capabilities.
-     *
-     * @param originalCapabilities the given {@link Capabilities}.
-     * @param defaultName          a {@link MobileCapabilityType#AUTOMATION_NAME} value which has
-     *                             to be set up
-     * @return {@link Capabilities} with changed mobile automation name value or the original capabilities
-     */
-    protected static Capabilities ensureAutomationName(
-            Capabilities originalCapabilities, String defaultName) {
-        String currentAutomationName = CapabilityHelpers.getCapability(
-                originalCapabilities, AUTOMATION_NAME, String.class);
-        if (isBlank(currentAutomationName)) {
-            String capabilityName = originalCapabilities.getCapabilityNames()
-                    .contains(AUTOMATION_NAME) ? AUTOMATION_NAME : APPIUM_PREFIX + AUTOMATION_NAME;
-            return originalCapabilities.merge(new ImmutableCapabilities(capabilityName, defaultName));
-        }
-        return originalCapabilities;
-    }
-
-    /**
-     * Changes platform and automation names if they are not set
-     * and returns merged capabilities.
-     *
-     * @param originalCapabilities the given {@link Capabilities}.
-     * @param defaultPlatformName  a {@link MobileCapabilityType#PLATFORM_NAME} value which has
-     *                             to be set up
-     * @param defaultAutomationName The default automation name to set up for this class
-     * @return {@link Capabilities} with changed platform/automation name value or the original capabilities
-     */
-    protected static Capabilities ensurePlatformAndAutomationNames(
-            Capabilities originalCapabilities, String defaultPlatformName, String defaultAutomationName) {
-        Capabilities capsWithPlatformFixed = ensurePlatformName(originalCapabilities, defaultPlatformName);
-        return ensureAutomationName(capsWithPlatformFixed, defaultAutomationName);
     }
 
     @Override
@@ -242,60 +206,23 @@ public class AppiumDriver extends RemoteWebDriver implements
      * @param methodName The name of custom appium command.
      */
     public void addCommand(HttpMethod httpMethod, String url, String methodName) {
+        CommandInfo commandInfo;
         switch (httpMethod) {
             case GET:
-                MobileCommand.commandRepository.put(methodName, MobileCommand.getC(url));
+                commandInfo = MobileCommand.getC(url);
                 break;
             case POST:
-                MobileCommand.commandRepository.put(methodName, MobileCommand.postC(url));
+                commandInfo = MobileCommand.postC(url);
                 break;
             case DELETE:
-                MobileCommand.commandRepository.put(methodName, MobileCommand.deleteC(url));
+                commandInfo = MobileCommand.deleteC(url);
                 break;
             default:
                 throw new WebDriverException(String.format("Unsupported HTTP Method: %s. Only %s methods are supported",
                         httpMethod,
                         Arrays.toString(HttpMethod.values())));
         }
-        ((AppiumCommandExecutor) getCommandExecutor()).refreshAdditionalCommands();
-    }
-
-    public URL getRemoteAddress() {
-        return remoteAddress;
-    }
-
-    @Override
-    protected void startSession(Capabilities capabilities) {
-        Response response = execute(new AppiumNewSessionCommandPayload(capabilities));
-        if (response == null) {
-            throw new SessionNotCreatedException(
-                    "The underlying command executor returned a null response.");
-        }
-
-        Object responseValue = response.getValue();
-        if (responseValue == null) {
-            throw new SessionNotCreatedException(
-                    "The underlying command executor returned a response without payload: "
-                            + response);
-        }
-        if (!(responseValue instanceof Map)) {
-            throw new SessionNotCreatedException(
-                    "The underlying command executor returned a response with a non well formed payload: "
-                            + response);
-        }
-
-        @SuppressWarnings("unchecked") Map<String, Object> rawCapabilities = (Map<String, Object>) responseValue;
-        // A workaround for Selenium API enforcing some legacy capability values
-        rawCapabilities.remove(CapabilityType.PLATFORM);
-        if (rawCapabilities.containsKey(CapabilityType.BROWSER_NAME)
-                && isBlank((String) rawCapabilities.get(CapabilityType.BROWSER_NAME))) {
-            rawCapabilities.remove(CapabilityType.BROWSER_NAME);
-        }
-        MutableCapabilities returnedCapabilities = new BaseOptions<>(rawCapabilities);
-        ReflectionHelpers.setPrivateFieldValue(
-                RemoteWebDriver.class, this, "capabilities", returnedCapabilities
-        );
-        setSessionId(response.getSessionId());
+        ((AppiumCommandExecutor) getCommandExecutor()).defineCommand(methodName, commandInfo);
     }
 
     @Override
@@ -326,5 +253,179 @@ public class AppiumDriver extends RemoteWebDriver implements
                 return outputType.convertFromPngBytes(png);
             }
         });
+    }
+
+    @Override
+    public AppiumDriver assertExtensionExists(String extName) {
+        if (absentExtensionNames.contains(extName)) {
+            throw new UnsupportedCommandException();
+        }
+        return this;
+    }
+
+    @Override
+    public AppiumDriver markExtensionAbsence(String extName) {
+        absentExtensionNames.add(extName);
+        return this;
+    }
+
+    @Override
+    public Optional<BiDi> maybeGetBiDi() {
+        return Optional.ofNullable(this.biDi);
+    }
+
+    @Override
+    @Nonnull
+    public BiDi getBiDi() {
+        var webSocketUrl = ((BaseOptions<?>) this.capabilities).getWebSocketUrl().orElseThrow(
+                () -> {
+                    var suffix = wasBiDiRequested
+                            ? "Do both the server and the driver declare BiDi support?"
+                            : String.format("Did you set %s to true?", SupportsWebSocketUrlOption.WEB_SOCKET_URL);
+                    return new BiDiException(String.format(
+                            "BiDi is not enabled for this driver session. %s", suffix
+                    ));
+                }
+        );
+        if (this.biDiUri == null) {
+            throw new BiDiException(
+                    String.format(
+                            "BiDi is not enabled for this driver session. "
+                                    + "Is the %s '%s' received from the create session response valid?",
+                            SupportsWebSocketUrlOption.WEB_SOCKET_URL, webSocketUrl
+                    )
+            );
+        }
+        if (this.biDi == null) {
+            // This should not happen
+            throw new IllegalStateException();
+        }
+        return this.biDi;
+    }
+
+    protected HttpClient getHttpClient() {
+        return ((HttpCommandExecutor) getCommandExecutor()).client;
+    }
+
+    @Override
+    protected void startSession(Capabilities requestCapabilities) {
+        var response = Optional.ofNullable(
+                execute(DriverCommand.NEW_SESSION(singleton(requestCapabilities)))
+        ).orElseThrow(() -> new SessionNotCreatedException(
+                "The underlying command executor returned a null response."
+        ));
+
+        var rawResponseCapabilities = Optional.ofNullable(response.getValue())
+                .map(value -> {
+                    if (!(value instanceof Map)) {
+                        throw new SessionNotCreatedException(String.format(
+                                "The underlying command executor returned a response "
+                                        + "with a non well formed payload: %s", response)
+                        );
+                    }
+                    //noinspection unchecked
+                    return (Map<String, Object>) value;
+                })
+                .orElseThrow(() -> new SessionNotCreatedException(
+                        "The underlying command executor returned a response without payload: " + response)
+                );
+
+        // TODO: remove this workaround for Selenium API enforcing some legacy capability values in major version
+        rawResponseCapabilities.remove("platform");
+        if (rawResponseCapabilities.containsKey(CapabilityType.BROWSER_NAME)
+                && isNullOrEmpty((String) rawResponseCapabilities.get(CapabilityType.BROWSER_NAME))) {
+            rawResponseCapabilities.remove(CapabilityType.BROWSER_NAME);
+        }
+        this.capabilities = new BaseOptions<>(rawResponseCapabilities);
+        this.wasBiDiRequested = Boolean.TRUE.equals(
+                requestCapabilities.getCapability(SupportsWebSocketUrlOption.WEB_SOCKET_URL)
+        );
+        if (wasBiDiRequested) {
+            this.initBiDi((BaseOptions<?>) capabilities);
+        }
+        setSessionId(response.getSessionId());
+    }
+
+    /**
+     * Changes platform name if it is not set and returns merged capabilities.
+     *
+     * @param originalCapabilities the given {@link Capabilities}.
+     * @param defaultName          a platformName value which has to be set up
+     * @return {@link Capabilities} with changed platform name value or the original capabilities
+     */
+    protected static Capabilities ensurePlatformName(
+            Capabilities originalCapabilities, String defaultName) {
+        return originalCapabilities.getPlatformName() == null
+                ? originalCapabilities.merge(new ImmutableCapabilities(PLATFORM_NAME, defaultName))
+                : originalCapabilities;
+    }
+
+    /**
+     * Changes automation name if it is not set and returns merged capabilities.
+     *
+     * @param originalCapabilities the given {@link Capabilities}.
+     * @param defaultName          a platformName value which has to be set up
+     * @return {@link Capabilities} with changed mobile automation name value or the original capabilities
+     */
+    protected static Capabilities ensureAutomationName(
+            Capabilities originalCapabilities, String defaultName) {
+        String currentAutomationName = CapabilityHelpers.getCapability(
+                originalCapabilities, AUTOMATION_NAME_OPTION, String.class);
+        if (isNullOrEmpty(currentAutomationName)) {
+            String capabilityName = originalCapabilities.getCapabilityNames()
+                    .contains(AUTOMATION_NAME_OPTION) ? AUTOMATION_NAME_OPTION : APPIUM_PREFIX + AUTOMATION_NAME_OPTION;
+            return originalCapabilities.merge(new ImmutableCapabilities(capabilityName, defaultName));
+        }
+        return originalCapabilities;
+    }
+
+    /**
+     * Changes platform and automation names if they are not set
+     * and returns merged capabilities.
+     *
+     * @param originalCapabilities  the given {@link Capabilities}.
+     * @param defaultPlatformName   a platformName value which has to be set up
+     * @param defaultAutomationName The default automation name to set up for this class
+     * @return {@link Capabilities} with changed platform/automation name value or the original capabilities
+     */
+    protected static Capabilities ensurePlatformAndAutomationNames(
+            Capabilities originalCapabilities, String defaultPlatformName, String defaultAutomationName) {
+        Capabilities capsWithPlatformFixed = ensurePlatformName(originalCapabilities, defaultPlatformName);
+        return ensureAutomationName(capsWithPlatformFixed, defaultAutomationName);
+    }
+
+    private void initBiDi(BaseOptions<?> responseCaps) {
+        var webSocketUrl = responseCaps.getWebSocketUrl();
+        if (webSocketUrl.isEmpty()) {
+            return;
+        }
+        URISyntaxException uriSyntaxError = null;
+        try {
+            this.biDiUri = new URI(String.valueOf(webSocketUrl.get()));
+        } catch (URISyntaxException e) {
+            uriSyntaxError = e;
+        }
+        if (uriSyntaxError != null || this.biDiUri.getScheme() == null) {
+            var message = String.format(
+                    "BiDi cannot be enabled for this driver session. "
+                            + "Is the %s '%s' received from the create session response valid?",
+                    SupportsWebSocketUrlOption.WEB_SOCKET_URL, webSocketUrl.get()
+            );
+            if (uriSyntaxError == null) {
+                throw new BiDiException(message);
+            }
+            throw new BiDiException(message, uriSyntaxError);
+        }
+        var executor = getCommandExecutor();
+        final HttpClient wsClient;
+        if (executor instanceof AppiumCommandExecutor) {
+            var wsConfig = ((AppiumCommandExecutor) executor).getAppiumClientConfig().baseUri(biDiUri);
+            wsClient = ((AppiumCommandExecutor) executor).getHttpClientFactory().createClient(wsConfig);
+        } else {
+            var wsConfig = AppiumClientConfig.defaultConfig().baseUri(biDiUri);
+            wsClient = HttpClient.Factory.createDefault().createClient(wsConfig);
+        }
+        var biDiConnection = new org.openqa.selenium.bidi.Connection(wsClient, biDiUri.toString());
+        this.biDi = new BiDi(biDiConnection);
     }
 }
